<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Student Support</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="calBtnText">Calendar</string>
    <string name ="paperBtnText">Papers</string>
    <string name="notificationBtnText">Support People</string>
    <string name="scholarshipsBtnText">Scholarships</string>
    <string name="videoBtnText">Videos</string>
    <string name="contactsBtnText">Contacts</string>
	<string name="aboutMessage"></string>
	<string name="searchHint">Search scholarships</string>
    <color name = "text_color">#31D1F1</color>
	<string name = "open">Open</string>
	<string name="title_activity_main">Contacts</string>
    <string name="hnt_et_name">Name</string>
    <string name="mainmenuimage">Student Support</string>
    <string name="hnt_et_work_phone"> Phone</string>
    <string name ="hnt_et_extension">Extension</string>  
    <string name="hnt_et_mobile_phone">Mobile Phone</string>
    <string name="hnt_et_work_email">Work Email</string>
    <string name ="hnt_et_address">Room #</string>
    <string name = "hnt_et_dept">Department</string>
    <string name = "hnt_et_title">Title</string>
    <string name="str_btn_add">Add Contact</string>
    <string name="str_btn_contacts">Contacts List</string>  
  	<string name="str_btn_reset">Clear Fields</string>
  	<string name="emailHint">Email Address</string>
  	<string name="iwiTitle">Create Iwi List</string>
  	<string name="calChangeRight">>></string>
  	<string name="calChangeLeft"> &lt;&lt;</string>
  	<string name="Room">Room:</string>
  	<string name="Button">Logout</string>
  	<string name="Email">Email</string>
  	<string name="Password">Password</string>
 
    
  	  <string name="Iwi_prompt">Choose an Iwi</string>
    
    
    
    <string-array name = "IwiList">
       <item >Ngai Takoto</item> 
       <item >Ngapuhi</item> 
       <item >Ngapuhi ki Whaingaroa-Ngati Kahu ki </item> 
       <item >Ngati Kahu</item> 
       <item >Ngati Kuri</item> 
       <item >Ngati Wai</item> 
       <item >Ngati Whatua</item> 
       <item >Te Aupouri</item> 
       <item >Te Rarawa</item> 
       <item >Te Tai Tokerau/Tamaki-makaurau </item> 
       <item >Ngai Tai (Hauraki)</item> 
       <item >Ngati Hako</item> 
       <item >Ngati Hei</item> 
       <item >Ngati Maru (Marutuahu)</item> 
       <item >Ngati Paoa</item> 
       <item >Ngati Porou ki Harataunga ki Mataora</item>  
        
    </string-array> 
       <string name="Login">Login</string> 
       <string name="Register">I don\'t have account. Register Me!</string>

</resources>